# tomata

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: __main__.py  exceptions.py  logger.py  main.py  middlewares.py  settings.py  utils.py
app/configs/: assignment_schema.json  default_assignment.yaml  events.yaml  events_mapper.yaml
app/core/: auth.py  crud.py  database.py  form_schema.json  models.py  routes.py  schema.py
app/core/models/: assignment.py  user.py
app/core/routes/: __init__.py  assignment.py  general.py  service.py  user.py
app/core/services/: assignment.py  auth.py  database.py  logs.py  s3.py  utils.py
app/samples/: default.yaml  schema.json
app/static/: styles.css
app/static/js/: actions.js  assignment.js  editing.js  editor.js  group.js  redirectWhenReady.js  user.js
app/templates/: base.html  edit.html  error.html  home.html  list.html  login.html  print_page.html
app/templates/assignment/: edit.html  fork_modal.html  home.html  list.html  view.html
app/templates/service/: logs.html  schema.html
app/templates/user/: add.html  home.html  list.html
app/templates/users/: add.html  home.html  list.html
doc/: changelog.md  usage.md
tests/: conftest.py  routes.py
tests/models/: test_assignment.py
tests/routes/: test_assignment.py
tests/services/: test_assignment.py
